fix on mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -180,8 +180,10 @@ article {
 	background-color: white !important;
 }
 
- 
-
+.poptrox-overlay, .poptrox-popup, .caption {
+	overflow-y: scroll; /* has to be scroll, not auto */
+	-webkit-overflow-scrolling: touch;
+}
 .client {
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 	background-position: 50% 50% !important;
@@ -1471,9 +1473,10 @@ input, select, textarea {
 
 			.poptrox-popup .caption {
 				/* display: none !important; */
-				overflow: scroll !important;
+				/* overflow: scroll !important; */
+				overflow-y: scroll; /* has to be scroll, not auto */
 				-webkit-overflow-scrolling: touch;
-				height: 200px;
+				/* height: 200px; */
 			}
 		}
 
